# tendhost

./: AGENTS.md  Cargo.toml  GOALS.md  README.md  bacon.toml  flake.nix  justfile  lefthook.yml  scc.text  scc.txt
.github/workflows/: ci.yml
crates/tendhost/: Cargo.toml
crates/tendhost-api/: Cargo.toml
crates/tendhost-api/src/: events.rs  lib.rs  requests.rs  responses.rs
crates/tendhost-cli/: Cargo.toml
crates/tendhost-cli/src/: main.rs
crates/tendhost-client/: Cargo.toml
crates/tendhost-client/src/: error.rs  http.rs  lib.rs  ws.rs
crates/tendhost-core/: Cargo.toml
crates/tendhost-core/src/: config.rs  error.rs  lib.rs  message.rs  state.rs
crates/tendhost-core/src/actor/: host.rs  mod.rs  orchestrator.rs
crates/tendhost-core/tests/: actor_integration.rs
crates/tendhost-exec/: Cargo.toml
crates/tendhost-exec/src/: error.rs  keys.rs  lib.rs  local.rs  result.rs  ssh.rs  traits.rs
crates/tendhost-inventory/: Cargo.toml
crates/tendhost-inventory/src/: collector.rs  error.rs  lib.rs  osquery.rs  query.rs  types.rs
crates/tendhost-pkg/: Cargo.toml
crates/tendhost-pkg/src/: apt.rs  dnf.rs  docker.rs  error.rs  lib.rs  traits.rs  types.rs
crates/tendhost-tui/: Cargo.toml
crates/tendhost-tui/src/: action.rs  app.rs  config.rs  event.rs  main.rs
crates/tendhost-tui/src/ui/: details.rs  events.rs  help.rs  hosts.rs  layout.rs  mod.rs  statusbar.rs
crates/tendhost/src/: config.rs  factory.rs  main.rs  router.rs  state.rs
crates/tendhost/src/api/: error.rs  fleet.rs  hosts.rs  mod.rs  system.rs  ws.rs
todo/: README.md
todo/tendhost/: 00-reasoning.md  01-implementation-plan.md  02-skeleton-status.md  03-api-implementation-progress.md
todo/tendhost-client/: 00-reasoning.md  01-implementation-plan.md  02-completion-summary.md
todo/tendhost-core/: 00-reasoning.md  01-implementation-plan.md  02-quick-reference.md
todo/tendhost-exec/: 00-reasoning.md  01-implementation-plan.md
todo/tendhost-inventory/: 00-reasoning.md  01-implementation-plan.md  02-completion-summary.md
todo/tendhost-pkg/: 00-reasoning.md  01-implementation-plan.md
todo/tendhost-tui/: 00-reasoning.md  01-implementation-plan.md  02-completion-summary.md
