[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mozart409/tendhost"

[workspace.dependencies]
# Actor framework
kameo = "0.19"
kameo_actors = "0.4"
kameo_macros = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server & WebSocket
axum = "0.8"
tokio-tungstenite = "0.28"
reqwest = { version = "0.13", features = ["json", "cookies", "rustls"], default-features = false }

# OpenAPI
utoipa = { version = "5.4", features = ["chrono"] }
utoipa-scalar = "0.3"

# Error handling
thiserror = "2.0"
color-eyre = "0.6"
eyre = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# SSH & remote execution
russh = "0.57"

# CLI & TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# internal crates
tendhost-api = { path = "crates/tendhost-api" }
tendhost-client = { path = "crates/tendhost-client" }
tendhost-core = { path = "crates/tendhost-core" }
tendhost-inventory = { path = "crates/tendhost-inventory" }
tendhost-pkg = { path = "crates/tendhost-pkg" }
tendhost-exec = { path = "crates/tendhost-exec" }

