[package]
name = "tendhost-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
