[package]
name = "tendhost-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tendhost-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }

tendhost-api = { workspace = true }
tendhost-client = { workspace = true }