[package]
name = "tendhost-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tendhost-tui"
path = "src/main.rs"

[dependencies]
ratatui = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }

tendhost-api = { workspace = true }
tendhost-client = { workspace = true }