[package]
name = "tendhost"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tendhost"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

tendhost-api = { workspace = true }
tendhost-core = { workspace = true }
tendhost-inventory = { workspace = true }
tendhost-pkg = { workspace = true }
tendhost-exec = { workspace = true }
